attempting to fix the GET HEAD
